test_suite5/DRACO/test_suite/draco-pinpoint/passing/pass_channel_input_text.draco
channel input text ch;

proc main()void: a := 1; corp;


