test_suite5/DRACO/test_suite/draco-pinpoint/failing/fail_channel_wrong_order.draco
channel text input ch;

proc main()void: a := 1; corp;


